php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #40352 FCGI_WEB_SERVER_ADDRS function get lost
Submitted: 2007-02-04 16:30 UTC Modified: 2007-02-15 12:07 UTC
From: xuefer at 21cn dot com Assigned: dmitry (profile)
Status: Closed Package: CGI/CLI related
PHP Version: 5.2.1RC4 OS: linux
Private report: No CVE-ID: None
 [2007-02-04 16:30 UTC] xuefer at 21cn dot com
Description:
------------
$ cd php-src/sapi/cgi/README.FastCGI
$ grep -rF FCGI_WEB_SERVER_ADDRS .
./README.FastCGI:variable FCGI_WEB_SERVER_ADDRS to control who can connect to the FastCGI.
./README.FastCGI:export FCGI_WEB_SERVER_ADDRS=199.170.183.28,199.170.183.71

hrm... an env variable that exists in read and nowhere in the source? before php implement its new fcgi, it was supported by libfcgi.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-02-05 09:44 UTC] tony2001@php.net
Dmitry, the readme probably needs fixing.
 [2007-02-15 12:07 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 17:00:02 2026 UTC