Fixed Bug #40352 (FCGI_WEB_SERVER_ADDRS function get lost)